# sfc-rs

./: Cargo.toml  LICENSE  README.md
sfc-core/: Cargo.toml  README.md
sfc-core/src/: error.rs  gasunit.rs  lib.rs  shdlc.rs
sfc5xxx-rs/: Cargo.toml
sfc5xxx-rs/src/: calibration.rs  device.rs  lib.rs  scaling.rs  valve_config.rs
sfc6xxx-rs/: Cargo.toml  README.md
sfc6xxx-rs/examples/: quick-start.rs
sfc6xxx-rs/src/: device.rs  lib.rs
src/: device.rs  gasunit.rs  lib.rs  main.rs  shdlc.rs  version.rs
